social + mejoras en validacion
